[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "neo4j>=5.14.1,<6.0.0",
    "langchain>=0.3.0",
    "langchain-ollama",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-neo4j>=0.1.0",
    "langchainhub>=0.1.15",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=2.0.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]